Implemented add, update and delete for category

--- a/src/BookStore.App/Pages/Categories/CategoryDetail.razor
+++ b/src/BookStore.App/Pages/Categories/CategoryDetail.razor
@@ -20,6 +20,7 @@
                 </div>
             </div>
         </div>
+        <a type="button" class="btn btn-info" @onclick="@NavigateToList">Back</a>
     </div>
 
 </section>
