--- a/src/BookStore.App/Pages/Categories/CategoryList.razor
+++ b/src/BookStore.App/Pages/Categories/CategoryList.razor
@@ -2,6 +2,11 @@
 
 <h1 class="page-title">Categories</h1>
 
+<div class="col-md-12">
+    <button type="button" class="btn btn-success"  @onclick="@AddCategory">New Category</button>
+    <hr />
+</div>
+
 @if (Categories == null)
 {
     <p><em>Loading...</em></p>
