--- a/src/BookStore.App/Pages/Index.razor
+++ b/src/BookStore.App/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 
 <h1 class="text-center">Welcome to Blazor BookStore!</h1>
-<p class="text-center">A platform to search about your preferred books</p>
+<p class="text-center">A platform to research your favorite books</p>
 <div class="text-center">
     <button class="btn btn-info btn-lg" [routerLink]="['/books']">See Books</button>
 </div>
