--- a/src/BookStore.App/Pages/Index.razor
+++ b/src/BookStore.App/Pages/Index.razor
@@ -3,5 +3,8 @@
 <h1 class="text-center">Welcome to Blazor BookStore!</h1>
 <p class="text-center">A platform to research your favorite books</p>
 <div class="text-center">
-    <button class="btn btn-info btn-lg" [routerLink]="['/books']">See Books</button>
+    <NavLink class="nav-link" href="books">
+        <button class="btn btn-info btn-lg">See Books</button>
+    </NavLink>
+    
 </div>
