--- a/src/BookStore.App/Pages/Books/BookDetail.razor
+++ b/src/BookStore.App/Pages/Books/BookDetail.razor
@@ -18,6 +18,36 @@
                         <label type="text" readonly class="form-control-plaintext">@Book.Name</label>
                     </div>
                 </div>
+                <div class="form-group row">
+                    <label class="col-sm-4 col-form-label">Author</label>
+                    <div class="col-sm-8">
+                        <label type="text" readonly class="form-control-plaintext">@Book.Author</label>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-4 col-form-label">Category</label>
+                    <div class="col-sm-8">
+                        <label type="text" readonly class="form-control-plaintext">@Book.CategoryName</label>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-4 col-form-label">Description</label>
+                    <div class="col-sm-8">
+                        <label type="text" readonly class="form-control-plaintext">@Book.Description</label>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-4 col-form-label">Publish Date</label>
+                    <div class="col-sm-8">
+                        <label type="text" readonly class="form-control-plaintext">@Book.PublishDate</label>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-4 col-form-label">Value</label>
+                    <div class="col-sm-8">
+                        <label type="text" readonly class="form-control-plaintext">@Book.Value</label>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
