--- a/src/BookStore.App/Pages/Books/BookList.razor
+++ b/src/BookStore.App/Pages/Books/BookList.razor
@@ -19,6 +19,8 @@ else
                 <th>Book</th>
                 <th>Author</th>
                 <th>Category</th>
+                <th>Publish Date</th>
+                <th>Value</th>
                 <th>Options</th>
             </tr>
         </thead>
@@ -29,6 +31,8 @@ else
                     <td>@book.Name</td>
                     <td>@book.Author</td>
                     <td>@book.CategoryName</td>
+                    <td>@book.PublishDate</td>
+                    <td>@book.Value</td>
                     <td>
                         <a href="@($"bookdetail/{book.Id}")" class="btn btn-primary table-btn">
                             <i class="fas fa-info-circle"></i>
